--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>coba remote eki</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ducimus corporis totam nihil eum beatae! Aperiam assumenda ipsum dolorem tempora velit, animi praesentium iure molestiae quas quae voluptas quisquam amet!</p>
 </body>
 </html>
